# compiler-builtins

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  build.rs  configure.rs  justfile  lib.rs  rust-version  rustc-ice-2026-04-08T07_16_50-190622.txt  triagebot.toml
.github/: renovate.json5
.github/workflows/: main.libm.yaml  main.yaml  main.yml  publish.yaml  rustc-pull.yml
builtins-test/: Cargo.toml  build.rs
builtins-test-intrinsics/: Cargo.toml  build.rs
builtins-test-intrinsics/src/: main.rs
builtins-test/benches/: float_cmp.rs
builtins-test/src/: lib.rs
builtins-test/tests/: big.rs  conv.rs  lse.rs  misc.rs
ci/: env.sh  install.sh  run-docker.sh  run-windows.sh  run.sh  setup-windows.sh
compiler-builtins/: CHANGELOG.md  Cargo.toml  README.md  build.rs  configure.rs
compiler-builtins/examples/: intrinsics.rs
compiler-builtins/src/: aarch64_linux.rs  aarch64_outline_atomics.rs  arm.rs  arm_linux.rs  avr.rs  lib.rs  math.rs  probestack.rs  sync_builtins.rs  thumbv6k.rs  wasm.rs  x86.rs  x86_64.rs
compiler-rt/compiler-rt-cdylib/: build.rs
crates/panic-handler/: Cargo.toml
crates/symbol-check/: Cargo.toml  build.rs  has_wx.c
etc/: function-definitions.json  generate-constants.jl  update-api-list.py
examples/: intrinsics.rs
libm/: CHANGELOG.md  Cargo.toml  README.md  configure.rs
libm-test/: Cargo.toml
libm-test/benches/: icount.rs  random.rs
libm-test/examples/: plot_domains.rs
libm-test/src/: builtins_wrapper.rs  domain.rs  f8_impl.rs  generate.rs  lib.rs  mpfloat.rs  precision.rs  run_cfg.rs  test_traits.rs
libm-test/tests/: check_coverage.rs  compare_built_musl.rs  multiprecision.rs  u256.rs
libm/src/: lib.rs  libm_helper.rs
rlibc/: Cargo.toml
rlibc/src/: lib.rs
rustc-std-workspace-compiler-builtins/: Cargo.toml
src/: aarch64_linux.rs  arm.rs  arm_linux.rs  lib.rs  libc.rs  macros.rs  math.rs  probestack.rs  probestack_x86.S  probestack_x86_64.S  qc.rs  x86.rs  x86_64.rs
src/float/: add.rs  bitops.rs  cmp.rs  conv.rs  convert.rs  div.rs  mod.rs  mul.rs  pow.rs  sub.rs
src/int/: big.rs  mod.rs  mul.rs
src/mem/: impls.rs  mod.rs  x86_64.rs
src/os_version_check/: darwin_impl.rs  mod.rs
testcrate/: Cargo.toml  build.rs
testcrate/benches/: float.rs  float_conv.rs  mem.rs
testcrate/src/: bench.rs  lib.rs
testcrate/tests/: addsub.rs  aeabi_memclr.rs  aeabi_memcpy.rs  aeabi_memset.rs  big.rs  cmp.rs  conv.rs  mem.rs  (+5 more)
(+110 files in other folders)
