[workspace]
resolver = "3"
members = [
    "compiler-builtins",
    "builtins-test",
    "builtins-test-intrinsics",
]
# Exclude builtins-test-intrinsics because features
default-members = [
    "compiler-builtins",
    "builtins-test",
]

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
