[package]
name = "builtins-test-intrinsics"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
compiler_builtins = { path = "../", features = ["compiler-builtins"]}
panic-handler = { path = '../crates/panic-handler' }

[target.'cfg(target_family = "windows")'.dependencies]
# enable mem on Windows, required for panic machinery
compiler_builtins = { path = "../", features = ["compiler-builtins", "mem"]}

[features]
c = ["compiler_builtins/c"]
