[package]
name = "builtins-test-intrinsics"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
compiler_builtins = { path = "../", features = ["compiler-builtins"]}
panic-handler = { path = '../crates/panic-handler' }

[target.'cfg(target_family = "windows")'.dependencies]
# `#![no_std]` on Windows needs `string.h` routines.
compiler_builtins = { path = "../", features = ["compiler-builtins", "mem"]}

[features]
c = ["compiler_builtins/c"]
